# hostel-assist-web

./: .gitignore  README.md  apphosting.yaml  deploy.py  main.py  next.config.mjs  package-lock.json  package.json
cost-estimation-agent/: agent.py  pyproject.toml
cost-estimation-agent/graph/: builder.py  items.py  route_tools.py  state.py
cost-estimation-agent/models/: price_model.py
graph/: chatbot.py  respond.py  stream.py
models/: item.py
src/: middlewae.js
src/app/: globals.css  layout.js  page.js
src/app/admin/: page.js
src/app/api/autocomplete/: route.js
src/app/api/close_ticket/: route.js
src/app/api/leaderboard/: route.js
src/app/api/login/: route.js
src/app/api/ping/: route.js
src/app/api/register/: route.js
src/app/api/submit_ticket/: route.js
src/app/home/: page.js
src/app/home/leaderboard/: page.js
src/app/login/: page.js
src/app/signup/: page.js
src/app/technician/: page.js
src/components/: admin-sidebar.jsx  admin-ticket-dialog.jsx  admin-tickets-table.jsx  features-section.jsx  landing-hero.jsx  lang-toggle.jsx  leaderboard-table.jsx  loading-page.jsx  login-form.jsx  navbar.jsx  profile-dropdown.jsx  resolve-dialog.jsx  sidebar-profile.jsx  signup-form.jsx  ticket-card-tech.jsx  ticket-card.jsx  ticket-dialog.jsx  user-sidebar.jsx
src/components/ui/: background-pattern.jsx  particles.jsx
src/context/: AuthUserContext.js
src/lib/: firebaseAdmin.js  schemas.js  useAdminTickets.js  useTechnicianTickets.js  useUserTickets.js
tools/: price_response.py  tavily.py  tool_node.py
